2002-03-11  Anders Carlsson  <andersca@gnu.org>

	* libnautilus-private/nautilus-file-operations-progress-icons.h:
	* libnautilus-private/nautilus-file-operations-progress.c:
	(nautilus_file_operations_progress_update_icon),
	(nautilus_file_operations_progress_update),
	(nautilus_file_operations_progress_init),
	(nautilus_file_operations_progress_class_init):
	Add progress jar feature; the progress dialog icon now looks like 
	a jar that fills up as the files is copied. This idea was suggested
	by Tuomas Kuosmanen.

2002-03-11  Michael Meeks  <michael@ximian.com>

	* libnautilus/nautilus-clipboard.c
	(select_all_callback): use g_object_weak_ref
	instead of the "destroy" signal which is mostly
	useless.
	(idle_source_destroy_callback): impl.

2002-03-11  James Henstridge  <james@daa.com.au>

	* configure.in: build fix: get rid of unneeded semicolons which
	cause compile errors with newer versions of autoconf (this doesn't
	break older versions).

2002-03-11  Anders Carlsson  <andersca@gnu.org>

	* icons/Makefile.am:
	* icons/nautilus-launch-icon.png:
	Re-add nautilus-launch-icon.
	
	* src/nautilus-window.c: (set_up_default_icon_list):
	Use nautilus_pixmap_file to get the full path to the icons used.
	(nautilus_window_class_init):
	Remove nautilus_window_realize function, it only contained
	stuff we don't need to do these days.
	
2002-03-11  Anders Carlsson  <andersca@gnu.org>

	* src/nautilus-window.c: (nautilus_window_set_up_sidebar),
	(nautilus_window_tear_down_sidebar), (nautilus_window_constructed),
	(nautilus_window_hide_sidebar), (nautilus_window_show_sidebar),
	(nautilus_window_sidebar_showing):
	Only create the sidebar if the "Display sidebar in new windows" 
	preference is turned on, otherwise create it when user activates
	"Show sidebar" and destroy it when user activates "Hide sidebar".
	This fixes #72595.

2002-03-11  Anders Carlsson  <andersca@gnu.org>

	* src/file-manager/fm-directory-view.c: (process_old_files),